# Ayoto

./: .eslintrc.cjs  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  INSTALLATION.md  LICENSE  MIGRATION_SUMMARY.md  PLUGIN_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  UI_DESIGN.md  index.html  main.js  package-lock.json  package.json  tailwind.config.js  tauri.conf.json  vite.config.js  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
Electron/zenshin-electron/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  TAURI_MIGRATION.md  package.json
backend/: index.js
capabilities/: default.json
common/: utils.js
docs/: NATIVE_PLUGIN_DEVELOPMENT.md  PLUGIN_SYSTEM.md  WATCH_TOGETHER.md  ZPE_PLUGIN_DEVELOPMENT.md  ZPE_PLUGIN_SYSTEM.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.jsx  App.tsx  index.css
plugin-template/: README.md  manifest.json
plugin-template/src/: api.js  index.js  parser.js  utils.js
resources/examples/: example-plugin.ayoto
resources/plugins/: sample-provider.ayoto
scripts/: build-plugin.bat  build-plugin.mjs  build-plugin.sh
src/: App.tsx  anime4k.rs  commands.rs  index.ts  lib.rs  main.tsx  miracast.rs  profiles.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  miracast.rs  plugin.rs  proxy.rs
src-tauri/src/providers/: example.rs  mod.rs
src/client/: ApolloClient.tsx  authService.ts  useAuth.tsx
src/components/: Changelog.tsx  NotificationTray.tsx  ThemeContext.tsx
src/hooks/: animeInterface.ts  useApi.ts  useFilters.ts
src/pages/: 404.tsx  Addons.tsx  Callback.tsx  Home.tsx  Profile.tsx  Search.tsx  Watch.tsx
src/plugin/: commands.rs  loader.rs  manifest.rs  mod.rs  types.rs
templates/: README.md  media-provider-manifest.json  media-provider-plugin.js  stream-provider-manifest.json  stream-provider-plugin.js
templates/zpe-plugins/sample-media-provider/: Cargo.toml  README.md  manifest.json  plugin.wasm  sample-media-provider.zpe
templates/zpe-plugins/sample-media-provider/src/: lib.rs
(+119 files in other folders)
