[package]
name = "sample-media-provider"
version = "1.0.0"
edition = "2021"
description = "A sample ZPE media provider plugin for Ayoto"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"    # Optimize for size
lto = true         # Link Time Optimization
codegen-units = 1  # Better optimization
panic = "abort"    # Smaller binary
